    specified prefix.
  * importfeed: Avoid downloading a redundant item from a feed whose
    guid has been downloaded before, even when the url has changed.
  * importfeed: Always store itemid in metadata; before this was only
    done when annex.genmetadata was set.
  * Relax debian package dependencies to git >= 1:1.7.7.6 rather
    than needing >= 1:2.0.
  * test: Fix --list-tests

 -- Joey Hess <id@joeyh.name>  Fri, 27 Mar 2015 16:04:43 -0400

git-annex (5.20150327) unstable; urgency=medium

  * readpresentkey: New plumbing command for checking location log.
  * checkpresentkey: New plumbing command to check if a key can be verified
    to be present on a remote.
  * Added a post-update-annex hook, which is run after the git-annex branch
    is updated. Needed for git update-server-info.
  * migrate: --force will force migration of keys already using the
    destination backend. Useful in rare cases.
  * Man pages for individual commands now available, and can be
    opened using "git annex help <command>"
  * --auto is no longer a global option; only get, drop, and copy
    accept it. (Not a behavior change unless you were passing it to a
    command that ignored it.)
  * Improve error message when --in @date is used and there is no
    reflog for the git-annex branch.
  * assistant: Committing a whole lot of files at once could overflow
    command-line length limits and cause the commit to fail. This
    only happened when using the assistant in an indirect mode repository.
  * Work around curl bug when asked to download an empty url to a file.
  * Fix bug introduced in the last release that broke git-annex sync
    when git-annex was installed from the standalone tarball.

 -- Joey Hess <id@joeyh.name>  Fri, 27 Mar 2015 13:10:59 -0400

git-annex (5.20150317) unstable; urgency=medium

  * fsck: Incremental fsck uses sqlite to store its records, instead
    of abusing the sticky bit. Existing sticky bits are ignored;